--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description":"Library for supporting customized Contao form rendering",
     "keywords":["contao", "workflow", "data flow"],
     "type":"contao-bundle",
-    "license":"LGPL-3.0+",
+    "license":"LGPL-3.0-or-later",
     "authors":[
         {
             "name":"David Molineus",
