--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: php
 
 php:
   - "7.1"
+  - "7.2"
 
 env:
   - CONTAO_VERSION=contao/core-bundle ~4.4.0
+  - CONTAO_VERSION=contao/core-bundle ~4.5.0
 
 matrix:
   exclude:
