--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
         "beberlei/assert": "~2.0",
         "contao/core-bundle":"~4.4",
         "contao-community-alliance/meta-palettes": "~1.11 || ~2.0",
-        "friends-of-contao/contao-associategroups": "~1.3@dev",
+        "friends-of-contao/contao-associategroups": "~1.3",
         "mathiasverraes/classfunctions": "~1.1",
         "menatwork/contao-multicolumnwizard": "^3.3.14",
-        "netzmacht/workflow": "~2.0@beta",
+        "netzmacht/workflow": "~2.0",
         "netzmacht/contao-toolkit": "~3.0",
         "netzmacht/contao-form-bundle": "~1.0@dev",
         "symfony/expression-language": "~3.3"
