--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -65,6 +65,7 @@ services:
     arguments:
       - '@netzmacht.contao_workflow.expression_language'
       - '@security.authorization_checker'
+      - '@netzmacht.contao_workflow.type_registry'
     tags:
       - {
           name: 'kernel.event_listener',
