Resolve unknown symbols issues.

--- a/composer.json
+++ b/composer.json
@@ -18,16 +18,32 @@
     },
     "require":{
         "php":"^7.1",
-        "beberlei/assert": "~2.0",
+        "ext-json": "*",
+        "ext-pdo": "*",
+        "beberlei/assert": "^2.0 || ^3.0",
+        "adamquaile/symfony-fieldset-bundle": "^1.1",
         "contao/core-bundle":"~4.4",
         "contao-community-alliance/meta-palettes": "~1.11 || ~2.0",
+        "doctrine/dbal": "^2.5",
         "friends-of-contao/contao-associategroups": "~1.3",
         "mathiasverraes/classfunctions": "~1.1",
         "menatwork/contao-multicolumnwizard": "^3.3.14",
         "netzmacht/workflow": "~2.0",
         "netzmacht/contao-toolkit": "~3.0",
         "netzmacht/contao-form-bundle": "~1.0@dev",
-        "symfony/expression-language": "~3.3"
+        "symfony/config": "^3.4 || ^4.0",
+        "symfony/dependency-injection": "^3.4 || ^4.0",
+        "symfony/expression-language": "^3.4 || ^4.0",
+        "symfony/event-dispatcher": "^3.4 || ^4.0",
+        "symfony/form": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.0",
+        "symfony/http-foundation": "^3.4 || ^4.0",
+        "symfony/routing": "^3.4 || ^4.0",
+        "symfony/security": "^3.4 || ^4.0",
+        "symfony/translation": "^3.4 || ^4.0",
+        "symfony/templating": "^3.4 || ^4.0",
+        "symfony/options-resolver": "^3.4 || ^4.0",
+        "sensio/framework-extra-bundle": "~5.0"
     },
     "require-dev": {
         "phpcq/all-tasks": "^1.2",
