--- a/composer.json
+++ b/composer.json
@@ -1,62 +1,68 @@
 {
-    "name":"netzmacht/contao-workflow",
-    "description":"Library for supporting customized Contao form rendering",
-    "keywords":["contao", "workflow", "data flow"],
-    "type":"contao-bundle",
-    "license":"LGPL-3.0-or-later",
-    "authors":[
+    "name": "netzmacht/contao-workflow",
+    "type": "contao-bundle",
+    "description": "Library for supporting customized Contao form rendering",
+    "keywords": [
+        "contao",
+        "workflow",
+        "data flow"
+    ],
+    "license": "LGPL-3.0-or-later",
+    "authors": [
         {
-            "name":"David Molineus",
-            "email":"mail@netzmacht.de",
-            "homepage":"https://netzmacht.de"
+            "name": "David Molineus",
+            "email": "mail@netzmacht.de",
+            "homepage": "https://netzmacht.de"
         }
     ],
-    "support":{
-        "email":"mail@netzmacht.de",
-        "issues":"https://github.com/netzmacht/contao-workflow/issues",
-        "source":"https://github.com/netzmacht/contao-workflow"
-    },
-    "require":{
-        "php":"^7.1",
+    "require": {
+        "php": "^7.1",
         "ext-json": "*",
         "ext-pdo": "*",
-        "beberlei/assert": "^2.0 || ^3.0",
         "adamquaile/symfony-fieldset-bundle": "^1.1",
-        "contao/core-bundle":"~4.4",
+        "beberlei/assert": "^2.0 || ^3.0",
         "contao-community-alliance/meta-palettes": "~1.11 || ~2.0",
+        "contao/core-bundle": "~4.4",
         "doctrine/dbal": "^2.5",
         "friends-of-contao/contao-associategroups": "~1.3",
         "mathiasverraes/classfunctions": "~1.1",
         "menatwork/contao-multicolumnwizard": "^3.3.14",
-        "netzmacht/workflow": "~2.0",
-        "netzmacht/contao-toolkit": "~3.0",
         "netzmacht/contao-form-bundle": "~1.0@dev",
+        "netzmacht/contao-toolkit": "~3.0",
+        "netzmacht/workflow": "~2.0",
+        "sensio/framework-extra-bundle": "~5.0",
         "symfony/config": "^3.4 || ^4.0",
         "symfony/dependency-injection": "^3.4 || ^4.0",
-        "symfony/expression-language": "^3.4 || ^4.0",
         "symfony/event-dispatcher": "^3.4 || ^4.0",
+        "symfony/expression-language": "^3.4 || ^4.0",
         "symfony/form": "^3.4 || ^4.0",
-        "symfony/http-kernel": "^3.4 || ^4.0",
         "symfony/http-foundation": "^3.4 || ^4.0",
+        "symfony/http-kernel": "^3.4 || ^4.0",
+        "symfony/options-resolver": "^3.4 || ^4.0",
         "symfony/routing": "^3.4 || ^4.0",
         "symfony/security": "^3.4 || ^4.0",
-        "symfony/translation": "^3.4 || ^4.0",
         "symfony/templating": "^3.4 || ^4.0",
-        "symfony/options-resolver": "^3.4 || ^4.0",
-        "sensio/framework-extra-bundle": "~5.0"
+        "symfony/translation": "^3.4 || ^4.0"
     },
     "require-dev": {
-        "phpcq/all-tasks": "^1.2",
-        "contao/manager-plugin": "^2.1"
+        "contao/manager-plugin": "^2.1",
+        "phpcq/all-tasks": "^1.2"
     },
-    "autoload": {
-        "psr-4": { "Netzmacht\\ContaoWorkflowBundle\\": "src/" }
-    },
-    "extra":{
-        "contao-manager-plugin": "Netzmacht\\ContaoWorkflowBundle\\ContaoManager\\Plugin",
+    "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev",
             "dev-develop": "2.0.x-dev"
+        },
+        "contao-manager-plugin": "Netzmacht\\ContaoWorkflowBundle\\ContaoManager\\Plugin"
+    },
+    "autoload": {
+        "psr-4": {
+            "Netzmacht\\ContaoWorkflowBundle\\": "src/"
         }
+    },
+    "support": {
+        "email": "mail@netzmacht.de",
+        "issues": "https://github.com/netzmacht/contao-workflow/issues",
+        "source": "https://github.com/netzmacht/contao-workflow"
     }
 }
