Set public state of all services to restore Symfony 4 compatibility.

--- a/src/Resources/config/actions.yml
+++ b/src/Resources/config/actions.yml
@@ -1,4 +1,9 @@
 services:
+  _defaults:
+    public: false
+    autowire: false
+    autoconfigure: false
+
   netzmacht.contao_workflow.action_factory.property:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Property\PropertyActionFactory
     tags:
