--- a/src/Resources/config/controllers.yml
+++ b/src/Resources/config/controllers.yml
@@ -1,6 +1,12 @@
 services:
+  _defaults:
+    public: false
+    autowire: false
+    autoconfigure: false
+
   netzmacht.contao_workflow.backend.step_controller:
     class: Netzmacht\ContaoWorkflowBundle\Controller\Backend\StepController
+    public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
       - '@netzmacht.contao_workflow.entity_manager'
@@ -9,6 +15,7 @@ services:
 
   netzmacht.contao_workflow.backend.transition_controller:
     class: Netzmacht\ContaoWorkflowBundle\Controller\Backend\TransitionController
+    public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
       - '@netzmacht.contao_workflow.entity_manager'
