--- a/src/Resources/config/renderer.yml
+++ b/src/Resources/config/renderer.yml
@@ -1,4 +1,9 @@
 services:
+  _defaults:
+    public: false
+    autowire: false
+    autoconfigure: false
+
   netzmacht.contao_workflow.view.renderer:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\View\Renderer\DelegatingRenderer
     arguments:
