Disable property action.

--- a/src/Resources/config/actions.yml
+++ b/src/Resources/config/actions.yml
@@ -4,10 +4,12 @@ services:
     autowire: false
     autoconfigure: false
 
-  netzmacht.contao_workflow.action_factory.property:
-    class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Property\PropertyActionFactory
-    tags:
-      - { name: 'netzmacht.contao_workflow.action' }
+# Disabled for 2.0.0 release - Implementation has to be completed
+#
+#  netzmacht.contao_workflow.action_factory.property:
+#    class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Property\PropertyActionFactory
+#    tags:
+#      - { name: 'netzmacht.contao_workflow.action' }
 
   netzmacht.contao_workflow.action_factory.note:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Note\NoteActionFactory
