Use tagged services definition instead of defining custom compiler passes.

--- a/src/Resources/config/renderer.yml
+++ b/src/Resources/config/renderer.yml
@@ -7,7 +7,7 @@ services:
   netzmacht.contao_workflow.view.renderer:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\View\Renderer\DelegatingRenderer
     arguments:
-      - []
+      - !tagged netzmacht.contao_workflow.view.renderer
 
   netzmacht.contao_workflow.view.headline_renderer:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\View\Renderer\HeadlineRenderer
