Implement integration of default workflow in the data container based on it's configuration.

--- a/src/Resources/config/integration.yml
+++ b/src/Resources/config/integration.yml
@@ -8,11 +8,28 @@ services:
     public: true
     arguments:
       - '@netzmacht.contao_toolkit.dca.manager'
+      - '@translator'
       - '%netzmacht.contao_workflow.type.default.providers%'
     tags:
-      - { name: 'contao.hook', hook: 'loadDataContainer' }
+      - { name: 'contao.hook', hook: 'loadDataContainer', priority: 100 }
 
   Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\OptionsListener:
     public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
+      - '@netzmacht.contao_workflow.entity_manager'
+      - '@database_connection'
+
+  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\OperationListener:
+    public: true
+    arguments:
+      - '@netzmacht.contao_workflow.manager'
+      - '@netzmacht.contao_workflow.entity_factory'
+      - '@router'
+
+  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\SubmitButtonsListener:
+    public: true
+    arguments:
+      - '@netzmacht.contao_workflow.manager'
+      - '@netzmacht.contao_workflow.entity_factory'
+      - '@router'
