--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,6 +1,5 @@
 parameters:
-  netzmacht.contao_workflow.type.default.providers: []
-  netzmacht.contao_workflow.type.default.provider_names: []
+  netzmacht.contao_workflow.type.default: []
 
 services:
   _defaults:
@@ -16,7 +15,7 @@ services:
   netzmacht.contao_workflow.type.default:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\Type\DefaultWorkflowType
     arguments:
-      - '%netzmacht.contao_workflow.type.default.provider_names%'
+      - '%netzmacht.contao_workflow.type.default%'
     tags:
       - { name: 'netzmacht.contao_workflow.type' }
 
