Rework property access and entity handling. Do not use own entity interface. Use an property accessor instead.

--- a/src/Resources/config/listeners.yml
+++ b/src/Resources/config/listeners.yml
@@ -71,6 +71,7 @@ services:
     arguments:
       - '@netzmacht.contao_workflow.expression_language'
       - '@security.authorization_checker'
+      - '@netzmacht.contao_workflow.property_access_manager'
     tags:
       - {
           name: 'kernel.event_listener',
