--- a/src/Resources/config/integration.yml
+++ b/src/Resources/config/integration.yml
@@ -4,7 +4,7 @@ services:
     autowire: false
     autoconfigure: false
 
-  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\DataContainerListener:
+  Netzmacht\ContaoWorkflowBundle\EventListener\Integration\DataContainerListener:
     public: true
     arguments:
       - '@netzmacht.contao_toolkit.dca.manager'
@@ -13,20 +13,20 @@ services:
     tags:
       - { name: 'contao.hook', hook: 'loadDataContainer', priority: 100 }
 
-  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\OptionsListener:
+  Netzmacht\ContaoWorkflowBundle\EventListener\Integration\OptionsListener:
     public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
       - '@database_connection'
 
-  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\OperationListener:
+  Netzmacht\ContaoWorkflowBundle\EventListener\Integration\OperationListener:
     public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
       - '@netzmacht.contao_workflow.entity_manager'
       - '@router'
 
-  Netzmacht\ContaoWorkflowBundle\EventListener\DefaultType\SubmitButtonsListener:
+  Netzmacht\ContaoWorkflowBundle\EventListener\Integration\SubmitButtonsListener:
     public: true
     arguments:
       - '@netzmacht.contao_workflow.manager'
