--- a/src/Resources/config/integration.yml
+++ b/src/Resources/config/integration.yml
@@ -9,6 +9,7 @@ services:
     arguments:
       - '@netzmacht.contao_toolkit.dca.manager'
       - '@translator'
+      - '%netzmacht.contao_workflow.dca_providers%'
       - '%netzmacht.contao_workflow.type.default%'
     tags:
       - { name: 'contao.hook', hook: 'loadDataContainer', priority: 100 }
