--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,5 +1,6 @@
 parameters:
   netzmacht.contao_workflow.type.default: []
+  netzmacht.contao_workflow.dca_providers: []
   netzmacht.contao_workflow.property_accessors:
     - Netzmacht\ContaoWorkflowBundle\PropertyAccess\ArrayPropertyAccessor
     - Netzmacht\ContaoWorkflowBundle\PropertyAccess\ContaoModelPropertyAccessor
