--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "symfony/security": "^3.4 || ^4.0",
         "symfony/templating": "^3.4 || ^4.0",
         "symfony/translation": "^3.4 || ^4.0",
-        "symfony/validator": "^3.4 || ^4.0"
+        "symfony/validator": "^3.4 || ^4.0",
+        "terminal42/notification_center": "^1.3.4"
     },
     "require-dev": {
         "contao/manager-plugin": "^2.1",
