--- a/src/Resources/config/actions.yml
+++ b/src/Resources/config/actions.yml
@@ -23,3 +23,12 @@ services:
     class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Note\NoteActionFormBuilder
     tags:
       - { name: 'netzmacht.contao_workflow.action_form_builder' }
+
+  netzmacht.contao.workflow.action_factory.notification:
+    class: Netzmacht\ContaoWorkflowBundle\Workflow\Flow\Action\Notification\NotificationActionFactory
+    arguments:
+      - '@netzmacht.contao_toolkit.repository_manager'
+      - '@netzmacht.contao_workflow.property_access_manager'
+      - '@translator'
+    tags:
+      - { name: 'netzmacht.contao_workflow.action' }
