--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "friends-of-contao/contao-associategroups": "~1.3",
         "mathiasverraes/classfunctions": "~1.1",
         "menatwork/contao-multicolumnwizard": "^3.3.14",
-        "netzmacht/contao-form-bundle": "~1.0@dev",
+        "netzmacht/contao-form-bundle": "~1.0",
         "netzmacht/contao-toolkit": "~3.0",
         "netzmacht/workflow": "~2.0",
         "patchwork/utf8": "^1.2",
