--- a/build.default.properties
+++ b/build.default.properties
@@ -1,3 +1,5 @@
+phpcq.src.dirs = ${basedir}/src ${basedir}/example/src
+
 phpcs.standard = ${basedir}/vendor/phpcq/coding-standard/phpcs/PhpCodeQuality/ruleset.xml
 phpmd.ruleset  = ${basedir}/vendor/phpcq/coding-standard/phpmd/ruleset.xml
 
